--- a/On journaling.html
+++ b/On journaling.html
@@ -106,7 +106,7 @@
 	</p>
       
        <p>Tags: <a href="./tags/being.html">being</a>, <a href="./tags/journal.html">journal</a>, <a href="./tags/memory.html">memory</a>, <a href="./tags/thinking.html">thinking</a></p> 
-       <p>Parent: <a href="./Views.html">Views</a></p> 
+       <p>Parent: <a href="./Writing.html">Writing</a></p> 
 	   <p>Children: </p> 
     </div>
     
@@ -114,13 +114,27 @@
   </div>
   <!--/div-->
 
-  <div class="toc"></div>
+  <div class="toc"> <ul>
+ <li><a href="#states-of-mind">States of mind</a></li>
+ <li><a href="#private-vs-public">Private vs public</a></li>
+ </ul> </div>
 
   <div class="blog-main">
-    <p>It’s hard to recall states of mind without a prompt. Even when we have a specific memory cupped on the stage inside our head, we fall short of recreating the mind of five years ago. Our minds update, one part at a time, until it is completely renewed, and yet the change is imperceptible, as we feel we are the same person day-to-day.</p>
+    <h2 id="states-of-mind">States of mind</h2>
+<p>It’s hard to recall states of mind without a prompt. Even when we have a specific memory cupped on the stage inside our head, we fall short of recreating the mind of five years ago. Our minds update, one part at a time, until it is completely renewed, and yet the change is imperceptible, as we feel we are the same person day-to-day.</p>
 <p>I’m reminded this every time I read my diary again. I write in stream-of-consciousness; that helps. Had someone just told me to remember the memory, I would have remembered the memory, but not the me that was experiencing it.</p>
 <p>The flow of thoughts is simply different from the way my thoughts flow now. There are millions of parameters that make people who they are. It’s impossible to capture the way a person is at a moment in time. There’s a huge gap between the fidelity with which I can see who I was, between just trying to remember, and reading my old diary entries. I can only imagine what the gap is between what the entry captures, and who I actually was.</p>
 <p>To me, this is the most valuable thing about keeping a journal. Not the record of events - but to record, as much as possible, a state of mind. Writing is the closest thing we have. Sometimes, words are worth much more than pictures, because in a picture all you see is a smile, not the thoughts behind that smile.</p>
+<h2 id="private-vs-public">Private vs public</h2>
+<p>We were talking about journaling.</p>
+<p>People put journals on tumblr and then share them privately with specific people.</p>
+<p>My friend asked, doesn’t that violate the whole purpose of journaling? Isn’t the whole point of journals to be private?</p>
+<p>I didn’t think of a good answer on the spot, but I kept thinking about it.</p>
+<blockquote>
+<p>Sometimes I get so lonely</p>
+<p>not to be talked to</p>
+<p>but for someone to read the words that I write.</p>
+</blockquote>
 
   </div>
   
