--- a/Where are you looking.html
+++ b/Where are you looking.html
@@ -117,12 +117,15 @@
   <div class="toc"></div>
 
   <div class="blog-main">
-    <p>Back to <a href="Views%20on%20life.html">Views on life</a>.</p>
-<p>From <a href="What%20I%20learned%20from%20Patrick%20Winston.html">What I learned from Patrick Winston</a>:</p>
+    <p>From <a href="What%20I%20learned%20from%20Patrick%20Winston.html">What I learned from Patrick Winston</a>:</p>
 <blockquote>
 <p>Whenever you are meeting someone, look them in the eye. When a committee considers candidates for a position (for instance, the president of MIT), a candidate will have to shake hands with a long row of people. The biggest mistake is to turn your head toward the next person while you are still shaking hands with the previous person. This creates a kind of subconscious bias in the committee member’s heads. These candidates do not get the position.</p>
 </blockquote>
-<p>This principle applies much more broadly, and is usually referred to as <strong>focus on the present.</strong> + If you’re always looking to the future, you’re letting the present slip by without making the most of it, and you probably won’t enjoy it. You’ll look back on those days and ask yourself: what did I <em>do</em> in those days? Why can’t I remember? Why do I have nothing to talk about? + If you think that the person you’re talking to now is boring and it’s just something you tolerate because maybe you’ll talk to more interesting people later, then you’re not putting enough faith in the conversation to let it be interesting. It’s no fun to talk to someone who you can tell is “looking ahead” to more interesting things like in the Winston’s parable.</p>
+<p>This principle applies much more broadly, and is usually referred to as <strong>focus on the present.</strong></p>
+<ul>
+<li>If you’re always looking to the future, you’re letting the present slip by without making the most of it, and you probably won’t enjoy it. You’ll look back on those days and ask yourself: what did I <em>do</em> in those days? Why can’t I remember? Why do I have nothing to talk about?</li>
+<li>If you think that the person you’re talking to now is boring and it’s just something you tolerate because maybe you’ll talk to more interesting people later, then you’re not putting enough faith in the conversation to let it be interesting. It’s no fun to talk to someone who you can tell is “looking ahead” to more interesting things like in the Winston’s parable.</li>
+</ul>
 
   </div>
   
