--- a/Duck parable.html
+++ b/Duck parable.html
@@ -106,7 +106,7 @@
 	</p>
       
        <p>Tags: <a href="./tags/pbible.html">pbible</a>, <a href="./tags/parable.html">parable</a>, <a href="./tags/Buddhism.html">Buddhism</a></p> 
-       <p>Parent: <a href="./Views.html">Views</a></p> 
+       <p>Parent: <a href="./Personal%20bible.html">Personal bible</a></p> 
 	   <p>Children: </p> 
     </div>
     
