--- a/There are two types of truths in the world.html
+++ b/There are two types of truths in the world.html
@@ -105,7 +105,7 @@
           , Modified: 2017-08-07 
 	</p>
       
-       <p>Tags: <a href="./tags/under_construction.html">under_construction</a>, <a href="./tags/life.html">life</a>, <a href="./tags/religion.html">religion</a></p> 
+       <p>Tags: <a href="./tags/life.html">life</a>, <a href="./tags/religion.html">religion</a>, <a href="./tags/truth.html">truth</a></p> 
        <p>Parent: <a href="./Views.html">Views</a></p> 
 	   <p>Children: </p> 
     </div>
@@ -117,8 +117,16 @@
   <div class="toc"></div>
 
   <div class="blog-main">
-    <p>Story-truth is truer sometimes than happening-truth. <em>Tim O’Brien, The Things They Carried.</em></p>
-<p>There are two types of truth in the world: 1. <strong>reason</strong> (aka <strong>logos</strong>; science, mathematics, logic, etc.) because it helps you accomplish material things (planes fly not because we believe they can fly, but because they were constructed using principles from physics, chemistry, etc.) 1. <strong>feeling</strong> (aka <strong>mythos</strong>; stories, belief, etc.) because what makes people feel is what makes people do things (see <a href="Why%20do%20people%20do%20what%20they%20do?.html">Why do people do what they do?</a>), and that can be more effective than a recipe that tells them <em>exactly</em> how to do things but not give them the motivation to do so. Denying feeling can be as bad as denying actual truths, because then there’s a discord between what you feel and what you think you feel, causing you to lose touch with reality. It’s important to acknowledge both feeling and reason.</p>
+    <blockquote>
+<p>Story-truth is truer sometimes than happening-truth.</p>
+</blockquote>
+<p>-Tim O’Brien, The Things They Carried.</p>
+<p>There are two types of truth in the world:</p>
+<ol type="1">
+<li><strong>reason</strong> (aka <strong>logos</strong>; science, mathematics, logic, etc.) because it helps you accomplish material things (planes fly not because we believe they can fly, but because they were constructed using principles from physics, chemistry, etc.)</li>
+<li><strong>feeling</strong> (aka <strong>mythos</strong>; stories, belief, etc.) because what makes people feel is what makes people do things (see <a href="Why%20do%20people%20do%20what%20they%20do?.html">Why do people do what they do?</a>), and that can be more effective than a recipe that tells them <em>exactly</em> how to do things but not give them the motivation to do so.</li>
+</ol>
+<p>Denying feeling can be as bad as denying actual truths, because then there’s a discord between what you feel and what you think you feel, causing you to lose touch with reality. It’s important to acknowledge both feeling and reason.</p>
 <p>See also: <a href="Aligning%20reason%20and%20feeling.html">Aligning reason and feeling</a></p>
 
   </div>
