--- a/Personal vocabulary.html
+++ b/Personal vocabulary.html
@@ -137,6 +137,7 @@
 <li>-eto = suffix used referring to a baby step for something. Often used with the Esperanto word, ex. skribeto. Aims to replace apologetic thoughts like “I tried to write a poem, but instead just wrote a lot of disconnected words” with “I wrote poemetoj (poemetos).”</li>
 <li>eyetracted = when you want to be distracted, and for no reason read random words or posters around you</li>
 <li>frocon = Conversations that are low in temperature. “We froconned.” How about, inversation?</li>
+<li><strong>gardening</strong> = organizing and following thoughts. Done by journaling, outlining (e.g. in workflowy), or writing posts.</li>
 <li>gigotos (syndrome) = grass is greener on the other side</li>
 <li><strong>generative</strong> = “I wish I’m more generative.”</li>
 <li>improversation = Can every conversation be walking off a ledge? Parachutes are free in dream-land. (See <a href="Can%20we%20raise%20the%20temperature.html">Can we raise the temperature?</a></li>
