update number theory links

--- a/Math notes.html
+++ b/Math notes.html
@@ -126,13 +126,13 @@
 <p>Please do contact me if you find typos, want to help improve the notes, want source code, etc. I don’t always post/update the source code but I will if you poke me.</p>
 <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a></p>
 <h2 id="number-theory">Number Theory</h2>
-<p>I’ve compiled all my number theory notes in the following open-source <a href="https://www.dropbox.com/s/agebfj7rldc9wl1/number-theory.pdf?dl=0">textbook</a>. Source code is available at the dedicated repository <a href="https://github.com/holdenlee/number-theory." class="uri">https://github.com/holdenlee/number-theory.</a> Note much of this is still pretty sketchy; I’ve extracted the more complete parts into the two documents beolow. Contributions and corrections are welcome; please email me at holdenlee@alum.mit.edu.</p>
-<p>Update: General comments and updates are recorded on this <a href="http://goo.gl/JXBHHS">googledoc</a>.</p>
+<p>I’ve compiled all my number theory notes in the following open-source <a href="tiny.cc/ntbook">textbook</a> (shortlink: tiny.cc/hlbook). This version does not contain drafts in progress; for that see the github page.</p>
+<p>Source code is available at the dedicated repository <a href="https://github.com/holdenlee/number-theory" class="uri">https://github.com/holdenlee/number-theory</a>. Contributions and corrections are welcome; send me a pull request or email me at holdenlee@alum.mit.edu.</p>
+<p>The number theory notes are made of the following two parts:</p>
 <ul>
-<li>Proof of prime number theorem for arithmetic progressions: <a href="https://www.dropbox.com/s/zf0wjpfylpcd4rf/analytic-nt.pdf?dl=0">analytic-nt.pdf</a></li>
-<li>Algebraic number theory, class field theory, and complex multiplication: <a href="https://www.dropbox.com/s/n0hgikez3nlfdui/ant.pdf?dl=0">ant.pdf</a></li>
+<li>Proof of prime number theorem for arithmetic progressions: <a href="tiny.cc/annt" class="uri">tiny.cc/annt</a></li>
+<li>Algebraic number theory, class field theory, and complex multiplication: <a href="tiny.cc/algnt" class="uri">tiny.cc/algnt</a></li>
 </ul>
-<p>For recent updates, please see the googledoc.</p>
 <h2 id="high-school-math">High school math</h2>
 <ul>
 <li>Gliya geometry curriculum:
