--- a/Love.html
+++ b/Love.html
@@ -105,7 +105,7 @@
           , Modified: 2017-08-07 
 	</p>
       
-       <p>Tags: <a href="./tags/love.html">love</a>, <a href="./tags/feeling.html">feeling</a>, <a href="./tags/friendship.html">friendship</a></p> 
+       <p>Tags: <a href="./tags/love.html">love</a>, <a href="./tags/feeling.html">feeling</a>, <a href="./tags/friendship.html">friendship</a>, <a href="./tags/quote.html">quote</a></p> 
        <p>Parent: <a href="./Views.html">Views</a></p> 
 	   <p>Children: </p> 
     </div>
@@ -118,15 +118,21 @@
 
   <div class="blog-main">
     <ul>
-<li>Love and friendship aren’t two different things. To love someone you need to be friends with them first. Love is just deeper friendship.</li>
+<li>Love and friendship aren’t two different things. To love someone you need to be friends with them first. <a href="Love%20is%20friendship,%20just%20deeper.html">Love is just deeper friendship.</a></li>
 <li>Why do people get married? <a href="http://qr.ae/Nstyr" class="uri">http://qr.ae/Nstyr</a></li>
 <li>“intimacy did not consist of sexual intercourse, which could be done with strangers in a state of total alienation; intimacy consisted of talking for hours about what was important in one’s life (Red Mars, Robinson, p. 209)”</li>
 <li>An opinion: There’s nothing wrong with not loving someone. What’s wrong is pretending to love someone. Love cannot be talked about moralistically. Somehow if you have to force it, it’s not love. Love can’t be broken down into parts; if you try it falls apart. Love is for the sake of itself. This confuses me.</li>
 <li>William Deresiewicz writes what he learned about love from Sense and Sensibility (Kindle locations marked):</li>
 </ul>
+<blockquote>
 <p>2617 love is not something that happens to you, suddenly or otherwise; it’s something you have to prepare yourself for… For Austen, before you can fall in love with someone else, you have to come to know yourself, you have to grow up. Love isn’t going to magically transform you, make you into a better or even a different person, it can only work with what you already are… we have to learn to love.</p>
+</blockquote>
+<blockquote>
 <p>2625 You also need to know the person you fall in love with, and this doesn’t happen overnight. To Austen, love at first sight is a contradiction in terms… [there is only] lust at first sight, a whole train of fantasies and projections at first sight… Only a long, patient acquaintance is enough. A person’s character could not be read at a glance. It is a person’s character, not their body, with which we fall in love.</p>
+</blockquote>
+<blockquote>
 <p>2801 Friendship was the very essence of love… If love begins in friendship,… it has to adhere to the principles of friendship as Austen understood them… The lover’s highest role, like the friend’s, is to help you to become a better person: push you, if necessary, even at the risk of wounded feelings.</p>
+</blockquote>
 
   </div>
   
