--- a/Understanding between sexual cultures.html
+++ b/Understanding between sexual cultures.html
@@ -106,7 +106,7 @@
 	</p>
       
        <p>Tags: <a href="./tags/culture.html">culture</a>, <a href="./tags/LGBT.html">LGBT</a>, <a href="./tags/sexuality.html">sexuality</a>, <a href="./tags/understanding.html">understanding</a></p> 
-       <p>Parent: <a href="./index.html">index</a></p> 
+       <p>Parent: <a href="./Views.html">Views</a></p> 
 	   <p>Children: </p> 
     </div>
     
