--- a/Art and questions.html
+++ b/Art and questions.html
@@ -118,7 +118,7 @@
 
   <div class="blog-main">
     <p>Good art doesn’t make an argument, it presents a dilemma.</p>
-<p>Art is that it doesn’t give definite answers to questions, but rather breaks open the box you think inside when considering a question. Not giving an answer forces you to think through the questions yourself. A conclusion reached by oneself is a lot more powerful than one fed to you.</p>
+<p>Art doesn’t give definite answers to questions, but rather breaks open the box you think inside when considering a question. Not giving an answer forces you to think through the questions yourself. A conclusion reached by oneself is a lot more powerful than one fed to you.</p>
 <p>See also <a href="Answer%20in%20a%20different%20medium.html">Answer in a different medium</a>.</p>
 
   </div>
