--- a/Staring at the ceiling.html
+++ b/Staring at the ceiling.html
@@ -105,7 +105,7 @@
           , Modified: 2017-08-13 
 	</p>
       
-       <p>Tags: <a href="./tags/spirituality.html">spirituality</a>, <a href="./tags/Buddhism.html">Buddhism</a>, <a href="./tags/words.html">words</a></p> 
+       <p>Tags: <a href="./tags/anecdote.html">anecdote</a>, <a href="./tags/social.html">social</a></p> 
        <p>Parent: <a href="./Personal%20bible.html">Personal bible</a></p> 
 	   <p>Children: </p> 
     </div>
