--- a/Math notes.html
+++ b/Math notes.html
@@ -223,7 +223,7 @@
 <li><a href="https://www.dropbox.com/s/plrdg8oak90o0g2/part_iii_combo.pdf?dl=0">Extremal and probabilistic combinatorics</a> (Part III, Spring 2014)</li>
 <li><a href="https://www.dropbox.com/s/wob1sfwxffwznwm/noise_sensitivity.pdf?dl=0">Noise sensitivity</a> <a href="https://www.dropbox.com/s/6siohdavet0lnkb/ns.zip?dl=0">source</a> (Part III essay)</li>
 <li><a href="https://www.dropbox.com/s/6siohdavet0lnkb/ns.zip?dl=0">Ramsey theory</a> <a href="https://www.dropbox.com/s/10bymuecjvw5wlp/ramsey.zip?dl=0">source</a> (Part III, Fall 2013)</li>
-<li><a href="https://docs.google.com/document/d/177DqNun66BGiLKmOIPdOHeHf8lbcZUM7OHpNlsUY7Ho/edit#">Arithmetic combinatorics</a> (Part III, Fall 2013)</li>
+<li><a href="https://www.dropbox.com/s/1mhp069hvf8r1c4/part_iii_ac.pdf?dl=0">Arithmetic combinatorics</a> <a href="https://docs.google.com/document/d/177DqNun66BGiLKmOIPdOHeHf8lbcZUM7OHpNlsUY7Ho/edit#">googledoc about notes</a> (Part III, Fall 2013)</li>
 <li><a href="https://www.dropbox.com/s/tkkgwcrcxxecuhk/part_iii_equidistribution.pdf?dl=0">Additive combinatorics and equidistribution</a> <a href="https://www.dropbox.com/s/foqhbttmqyqu2yo/ed.zip?dl=0">source</a> (Part III, Spring 2014)</li>
 <li><a href="https://www.dropbox.com/s/85csggziyk983sl/AMiIT_review.pdf?dl=0">Algebraic methods in incidence theory</a> <a href="https://www.dropbox.com/s/nmr10deid4wwvno/AMiIT.zip?dl=0">source</a> (Part III, Spring 2014)</li>
 </ul></li>
