--- a/Math notes.html
+++ b/Math notes.html
@@ -106,7 +106,7 @@
 	</p>
       
        <p>Tags: </p> 
-       <p>Parent: </p> 
+       <p>Parent: <a href="./Math.html">Math</a></p> 
 	   <p>Children: </p> 
     </div>
     
