--- a/Research.html
+++ b/Research.html
@@ -124,15 +124,20 @@
  </ul> </div>
 
   <div class="blog-main">
-    <p>I am a Ph.D. student at Princeton working with Sanjeev Arora (<a href="http://unsupervised.cs.princeton.edu/">research group page</a>).</p>
+    <p>I am a Ph.D. student at Princeton working with <a href="https://www.cs.princeton.edu/~arora/">Sanjeev Arora</a> (<a href="http://unsupervised.cs.princeton.edu/">research group page</a>).</p>
 <p>I focus on machine learning theory, and also have broad interests in theoretical computer science and related math.</p>
 <h2 id="research-interests">Research interests</h2>
+<p>Although machine learning (and deep learning in particular) has made great advances in recent years, our mathematical understanding of it is shallow. Learning problems can be highly nonconvex, yet tractable in practice. What hidden structure do these problems have, and how can we design algorithms to take advantage of it?</p>
+<p>Current interests include:</p>
 <ul>
-<li>Machine learning: Although many machine learning problems are NP-complete, the instances that arise in reality are a restricted subset that is often more tractable. What hidden structure do these instances, and how can we design algorithms to take advantage of it? (See <a href="http://www.cs.princeton.edu/courses/archive/spring15/cos598D/">Arora’s course</a>.)</li>
+<li>Probabilistic modeling: How to design provable algorithms for learning probability distributions and sampling from them? How can we improve classical algorithms like Markov Chain Monte Carlo, or test the quality of the samples?</li>
+<li>Control theory and reinforcement learning: It is a well-studied problem how to find the optimal control for known linear dynamical system. However, reinforcement learning deals with learning how to act unknown, combinatorially complex systems; algorithms are heuristic and slow. How to bridge this gap?</li>
+<li>Natural language processing: Language is a fundamental part of human intelligence and a big frontier for machine learning. How do we create machines that can understand “grammar” and “semantics”?</li>
 </ul>
 <h2 id="papers">Papers</h2>
 <h3 id="machine-learning">Machine learning</h3>
 <ul>
+<li>Ge, R., Lee, H., &amp; Risteski, A. (2017). Beyond Log-concavity: Provable Guarantees for Sampling Multi-modal Distributions using Simulated Tempering Langevin Monte Carlo. arXiv preprint <a href="https://arxiv.org/abs/1710.02736">arXiv:1710.02736</a>. <a href="https://arxiv.org/pdf/1710.02736.pdf">pdf</a>.</li>
 <li>Lee, H., Ge, R., Ma, T., Risteski, A. &amp; Arora, S.. (2017). On the Ability of Neural Nets to Express Distributions. Proceedings of the 2017 Conference on Learning Theory, in PMLR 65:1271-1296. <a href="https://arxiv.org/pdf/1702.07028.pdf">pdf</a>, <a href="http://tiny.cc/hlcolt17">webpage</a></li>
 </ul>
 <h3 id="complexity-theory">Complexity theory</h3>
