--- a/index.html
+++ b/index.html
@@ -110,10 +110,12 @@
     <center>
 <img src="pics/me2.JPG?dl=0" alt="web" width="50%" height="50%">
 </center>
+<center>
 <p>Holden Lee</p>
 <p><a href="https://www.math.princeton.edu/">Mathematics Department</a></p>
 <p><a href="http://www.princeton.edu">Princeton University</a></p>
-<p><a href="mailto:holdenl@princeton.edu">holdenl@princeton.edu</a></p>
+<a href="mailto:holdenl@princeton.edu">holdenl@princeton.edu</a>
+</center>
 <p>I am a Ph.D. student advised by Sanjeev Arora, focusing on machine learning from a theoretical perspective. Check out my <a href="Research.html">research</a> and <a href="http://holdenlee.github.io/blog">blog</a>.</p>
 <h2 id="basic-info">Basic Info</h2>
 <ul>
@@ -129,8 +131,8 @@
 <h2 id="map">Map</h2>
 <ul>
 <li>To find about about my <b>work</b>, check out my <a href="Research.html">Research</a>, <a href="Math%20notes.html">Math notes</a>, and <a href="My%20teaching.html">My teaching</a>.</li>
-<li>Check out <a href="Math%20notes.html">math notes</a>. Contributions to improve the notes are welcome, no matter how little. Also under <a href="Math.html">Math</a> I’ve included some general advice for learning math and putting it in perspective (see <a href="Advice%20for%20a%20mathlete.html">Advice for a mathlete</a>).</li>
-<li>Browse my fiction in <a href="Creations.html">Creations</a>. I welcome all comments (and conversations even more). I’m always looking for people to share things with so feel free to drop me a line on anything you’ve written, too.</li>
+<li>Check out <strong><a href="Math%20notes.html">math notes</a></strong>. Contributions to improve the notes are welcome, no matter how little. Also under <a href="Math.html">math</a> I’ve included some general advice for learning math and putting it in perspective (see <a href="Advice%20for%20a%20mathlete.html">Advice for a mathlete</a>).</li>
+<li>Browse my fiction in <strong><a href="Creations.html">Creations</a></strong>. I welcome all comments (and conversations even more). I’m always looking for people to share things with so feel free to drop me a line on anything you’ve written, too.</li>
 <li>To <b>find out about me as a person</b> or <b>learn my views on a variety of topics</b> then check out my articles in <a href="Views.html">Views</a>.</li>
 <li>To see <b>what’s new</b>, read my blog at <a href="http://holdenlee.github.io/blog" class="uri">http://holdenlee.github.io/blog</a>.</li>
 </ul>
