--- a/Research.html
+++ b/Research.html
@@ -130,23 +130,23 @@
 <p>Although machine learning (and deep learning in particular) has made great advances in recent years, our mathematical understanding of it is shallow. Learning problems can be highly nonconvex, yet tractable in practice. What hidden structure do these problems have, and how can we design algorithms to take advantage of it?</p>
 <p>Current interests include:</p>
 <ul>
-<li>Probabilistic modeling: How to design provable algorithms for learning probability distributions and sampling from them? How can we improve classical algorithms like Markov Chain Monte Carlo, or test the quality of the samples?</li>
-<li>Control theory and reinforcement learning: It is a well-studied problem how to find the optimal control for known linear dynamical system. However, reinforcement learning deals with learning how to act unknown, combinatorially complex systems; algorithms are heuristic and slow. How to bridge this gap?</li>
-<li>Natural language processing: Language is a fundamental part of human intelligence and a big frontier for machine learning. How do we create machines that can understand “grammar” and “semantics”?</li>
+<li><strong>Probabilistic modeling</strong>: How to design provable algorithms for learning probability distributions and sampling from them? How can we improve classical algorithms like Markov Chain Monte Carlo, or test the quality of the samples?</li>
+<li><strong>Control theory and reinforcement learning</strong>: It is a well-studied problem how to find the optimal control for known linear dynamical system. However, reinforcement learning deals with learning how to act unknown, combinatorially complex systems; algorithms are heuristic and slow. How to bridge this gap?</li>
+<li><strong>Natural language processing</strong>: Language is a fundamental part of human intelligence and a big frontier for machine learning. How do we create machines that can understand “grammar” and “semantics”?</li>
 </ul>
 <h2 id="papers">Papers</h2>
 <h3 id="machine-learning">Machine learning</h3>
 <ul>
-<li>Ge, R., Lee, H., &amp; Risteski, A. (2017). Beyond Log-concavity: Provable Guarantees for Sampling Multi-modal Distributions using Simulated Tempering Langevin Monte Carlo. arXiv preprint <a href="https://arxiv.org/abs/1710.02736">arXiv:1710.02736</a>. <a href="https://arxiv.org/pdf/1710.02736.pdf">pdf</a>.</li>
-<li>Lee, H., Ge, R., Ma, T., Risteski, A. &amp; Arora, S.. (2017). On the Ability of Neural Nets to Express Distributions. Proceedings of the 2017 Conference on Learning Theory, in PMLR 65:1271-1296. <a href="https://arxiv.org/pdf/1702.07028.pdf">pdf</a>, <a href="http://tiny.cc/hlcolt17">webpage</a></li>
+<li>Ge, R., Lee, H., &amp; Risteski, A. (2017). <strong>Beyond Log-concavity: Provable Guarantees for Sampling Multi-modal Distributions using Simulated Tempering Langevin Monte Carlo.</strong> arXiv preprint <a href="https://arxiv.org/abs/1710.02736">arXiv:1710.02736</a>. <a href="https://arxiv.org/pdf/1710.02736.pdf">pdf</a>.</li>
+<li>Lee, H., Ge, R., Ma, T., Risteski, A. &amp; Arora, S.. (2017). <strong>On the Ability of Neural Nets to Express Distributions.</strong> Proceedings of the 2017 Conference on Learning Theory, in PMLR 65:1271-1296. <a href="https://arxiv.org/pdf/1702.07028.pdf">pdf</a>, <a href="http://tiny.cc/hlcolt17">webpage</a></li>
 </ul>
 <h3 id="complexity-theory">Complexity theory</h3>
 <ul>
-<li>(unpublished) Lee, H. (2015). Quadratic polynomials of small modulus cannot represent OR. arXiv preprint <a href="http://arxiv.org/abs/1509.08896">arXiv:1509.08896</a>.</li>
+<li>(unpublished) Lee, H. (2015). <strong>Quadratic polynomials of small modulus cannot represent OR.</strong> arXiv preprint <a href="http://arxiv.org/abs/1509.08896">arXiv:1509.08896</a>.</li>
 </ul>
 <h3 id="number-theory">Number theory</h3>
 <ul>
-<li>Belmont, E., Lee, H., Musat, A., &amp; Trebat-Leder, S. (2014). l-adic properties of partition functions. Monatshefte für Mathematik, 173(1), 1-34. <a href="http://link.springer.com/article/10.1007/s00605-013-0586-y">paper</a>, <a href="l-adic%20properties%20of%20partition%20functions.html">webpage</a> <!-- * [Paper](https://dl.dropboxusercontent.com/u/27883775/web/math/papers/l-adic%20properties%20of%20partition%20functions.pdf) --></li>
+<li>Belmont, E., Lee, H., Musat, A., &amp; Trebat-Leder, S. (2014). <strong>l-adic properties of partition functions.</strong> Monatshefte für Mathematik, 173(1), 1-34. <a href="http://link.springer.com/article/10.1007/s00605-013-0586-y">paper</a>, <a href="l-adic%20properties%20of%20partition%20functions.html">webpage</a> <!-- * [Paper](https://dl.dropboxusercontent.com/u/27883775/web/math/papers/l-adic%20properties%20of%20partition%20functions.pdf) --></li>
 </ul>
 
   </div>
