--- a/index.html
+++ b/index.html
@@ -110,13 +110,11 @@
     <center>
 <img src="pics/me2.JPG?dl=0" alt="web" width="50%" height="50%">
 </center>
+<br />
 <center>
-<p>Holden Lee</p>
-<p><a href="https://www.math.princeton.edu/">Mathematics Department</a></p>
-<p><a href="http://www.princeton.edu">Princeton University</a></p>
-<a href="mailto:holdenl@princeton.edu">holdenl@princeton.edu</a>
+<p>Holden Lee<br /> <a href="https://www.math.princeton.edu/">Mathematics Department</a><br /> <a href="http://www.princeton.edu">Princeton University</a><br /> holdenl@princeton.edu<br /></p>
 </center>
-<p>I am a Ph.D. student advised by Sanjeev Arora, focusing on machine learning from a theoretical perspective. Check out my <a href="Research.html">research</a> and <a href="http://holdenlee.github.io/blog">blog</a>.</p>
+<p>I am a Ph.D. student advised by Sanjeev Arora, focusing on machine learning from a theoretical perspective. Check out my <strong><a href="Research.html">research</a></strong> and <strong><a href="http://holdenlee.github.io/blog">blog</a></strong>.</p>
 <h2 id="basic-info">Basic Info</h2>
 <ul>
 <li>Education:
