--- a/Research.html
+++ b/Research.html
@@ -124,7 +124,7 @@
  </ul> </div>
 
   <div class="blog-main">
-    <p>I am a Ph.D. student at Princeton working with <a href="https://www.cs.princeton.edu/~arora/">Sanjeev Arora</a> (<a href="http://unsupervised.cs.princeton.edu/">research group page</a>).</p>
+    <p>I am a Ph.D. student at Princeton working with <a href="https://www.cs.princeton.edu/~arora/">Sanjeev Arora</a> (<a href="http://unsupervised.cs.princeton.edu/">research group page</a>, <a href="http://mltheory.cs.princeton.edu/">ML theory at Princeton</a>).</p>
 <p>I focus on machine learning theory, and also have broad interests in theoretical computer science and related math.</p>
 <h2 id="research-interests">Research interests</h2>
 <p>Although machine learning (and deep learning in particular) has made great advances in recent years, our mathematical understanding of it is shallow. Learning problems can be highly nonconvex, yet tractable in practice. What hidden structure do these problems have, and how can we design algorithms to take advantage of it?</p>
