--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 <p>Holden Lee<br /> <a href="https://www.math.princeton.edu/">Mathematics Department</a><br /> <a href="http://www.princeton.edu">Princeton University</a><br /> holdenl@princeton.edu<br /></p>
 </center>
 <p>I am a Ph.D. student advised by Sanjeev Arora, focusing on machine learning from a theoretical perspective. Check out my <strong><a href="Research.html">research</a></strong> and <strong><a href="http://holdenlee.github.io/blog">blog</a></strong>.</p>
+<p>Here are links to <a href="http://mltheory.cs.princeton.edu/">ML theory at Princeton</a> and <a href="http://unsupervised.cs.princeton.edu/">Sanjeev Arora’s research group</a>.</p>
 <h2 id="basic-info">Basic Info</h2>
 <ul>
 <li>Education:
