--- a/Advice for a mathlete.html
+++ b/Advice for a mathlete.html
@@ -123,7 +123,7 @@
   <div class="blog-main">
     <p>Back to <a href="Math.html">Math</a>. (Note: I’d be happy to talk if you still have questions; just shoot me an email.)</p>
 <h2 id="advice-for-high-schoolers-including-but-not-limited-to-mathletes">1 Advice for high-schoolers (including, but not limited to, mathletes)</h2>
-<p>First, you should read <a href="Links%20for%20life.html">Links for life</a>: some general advice for high school and college. <strong>DO IT.</strong> (NEW: <a href="General%20advice.html">General advice</a>)</p>
+<p>First, check out <a href="General%20advice.html">General advice</a>.</p>
 <p><strong>Q: Why should I care about other stuff besides math competitions? I just want to focus on math.</strong></p>
 <p><strong>A:</strong> At this point it may be too early to know exactly what you want to do for a living (especially if you think that you want to do math for a living because you like math competitions – a mathematician’s job is very different from the picture of “doing math” that comes with math competitions). Interests can change, and if you’re not sure, you don’t want to be in a position where you only know how to do math and not anything else. Especially don’t just do math if you have other interests too.</p>
 <p>High school is a good time to explore a lot of different interests (college is good for that too), so don’t feel like you have to spend all your time on math. (Paul Graham’s <a href="http://www.paulgraham.com/hs.html" class="uri">http://www.paulgraham.com/hs.html</a> is a good read.) It’s good to figure out why different things are interesting, and what makes people want to do those things for a living.</p>
