--- a/index cards.html
+++ b/index cards.html
@@ -133,7 +133,7 @@
 </ul></li>
 <li>Zeilberger’s opinions <a href="http://www.math.rutgers.edu/~zeilberg/OPINIONS.html.html">http://www.math.rutgers.edu/~zeilberg/OPINIONS.html</a></li>
 </ul>
-<p>See also <a href="Forget%20your%20index%20cards.html">Forget your index cards</a>.</p>
+<p>See also <a href="Bite-sized%20writing%20for%20powerful%20thinking.html">Bite-sized writing for powerful thinking</a> and <a href="Forget%20your%20index%20cards.html">Forget your index cards</a>.</p>
 
   </div>
   
