--- a/Research.html
+++ b/Research.html
@@ -152,7 +152,7 @@
 <ul>
 <li><p><strong>l-adic properties of partition functions.</strong></p>
 <p>with Eva Belmont, Alexandra Musat, and Sarah Trebat-Leder.</p>
-<p><a href="http://link.springer.com/article/10.1007/s00605-013-0586-y">Monatshefte für Mathematik, 173(1), 1-34</a>, 2014. [<a href="https://arxiv.org/abs/1510.01202">arXiv</a>, <a href="l-adic%20properties%20of%20partition%20functions.html">webpage</a>]</p></li>
+<p><a href="http://link.springer.com/article/10.1007/s00605-013-0586-y">Monatshefte für Mathematik, 173(1), 1-34</a>, 2014. [<a href="https://arxiv.org/abs/1510.01202">arXiv</a>, <a href="https://www.dropbox.com/s/81413cszqabcwcx/MIT%20presentation.pdf?dl=0">presentation</a>, <a href="l-adic%20properties%20of%20partition%20functions.html">webpage</a>]</p></li>
 </ul>
 
   </div>
