--- a/l-adic properties of partition functions.html
+++ b/l-adic properties of partition functions.html
@@ -120,7 +120,7 @@
     <p>Belmont, E., Lee, H., Musat, A., &amp; Trebat-Leder, S. (2014). l-adic properties of partition functions. Monatshefte für Mathematik, 173(1), 1-34.</p>
 <ul>
 <li><a href="http://link.springer.com/article/10.1007/s00605-013-0586-y">Paper</a></li>
-<li><a href="https://dl.dropboxusercontent.com/u/27883775/web/math/papers/MIT%20presentation.pdf">Presentation</a></li>
+<li><a href="https://www.dropbox.com/s/81413cszqabcwcx/MIT%20presentation.pdf?dl=0">Presentation</a></li>
 </ul>
 <p>Work done at 2011 Number theory REU at Emory University with Ken Ono</p>
 <p>Summary: Partition functions occupy the juncture between number theory and the theory of modular functions, and serve as a testing ground for deep conjectures relating these two areas. Defined as the number of ways to divide n objects into groups, the partition function p(n) satisfies divisibility relations that are most easily explained using modular functions: for instance, p(5n+4) is always divisible by 5.</p>
