--- a/Simulated tempering Langevin Monte Carlo.html
+++ b/Simulated tempering Langevin Monte Carlo.html
@@ -158,7 +158,7 @@
 <li><a href="https://arxiv.org/abs/1710.02736">arXiv</a>, <a href="https://arxiv.org/pdf/1710.02736.pdf">pdf</a>.</li>
 <li><a href="https://www.dropbox.com/s/v2pijnsk9c6t11s/soft_partition2.pdf?dl=0">Supplement</a>: Contains a simpler proof of the main theorem in the paper. I recommend reading this instead of the proof in the paper. Note this is a work in progress.</li>
 <li><a href="https://www.dropbox.com/s/44udkqyd2r95qzk/slides_IAS.pdf?dl=0">Slides</a>, <a href="https://dynalist.io/d/wW7edPHuU41y1qxWAI0fL__c#z=c2y7iGMb-rjqoGupMLQ1DAWe">transcript</a></li>
-<li>Poster: To be added.</li>
+<li><a href="https://www.dropbox.com/s/nvh4g055lyx9yth/poster_bayesian.pdf?dl=0">Poster</a></li>
 </ul>
 <h3 id="abstract">Abstract</h3>
 <p>A key task in Bayesian statistics is sampling from distributions that are only specified up to a partition function (i.e., constant of proportionality). However, without any assumptions, sampling (even approximately) can be #P-hard, and few works have provided “beyond worst-case” guarantees for such settings.</p>
