--- a/Projects.html
+++ b/Projects.html
@@ -114,10 +114,54 @@
   </div>
   <!--/div-->
 
-  <div class="toc"></div>
+  <div class="toc"> <ul>
+ <li><a href="#github-projects">Github projects</a><ul>
+ <li><a href="#games">Games</a></li>
+ <li><a href="#web-apps">Web apps</a></li>
+ <li><a href="#utilities">Utilities</a></li>
+ </ul></li>
+ </ul> </div>
 
   <div class="blog-main">
-    <p><em>UNDER CONSTRUCTION</em>. Will eventually contain a guide to my github projects.</p>
+    <h2 id="github-projects">Github projects</h2>
+<h3 id="games">Games</h3>
+<ul>
+<li><a href="https://github.com/holdenlee/purescript-games">Snake in purescript</a> (Purescript), <a href="http://holdenlee.github.io/blog/posts/programming/purescript/snake-in-purescript.html">writeup</a>.</li>
+<li><a href="https://github.com/holdenlee/Namba">Namba</a> (Elm): Fast-paced game involving arithmetic and functional programming. <!--need to fix link--></li>
+</ul>
+<h3 id="web-apps">Web apps</h3>
+<ul>
+<li><a href="https://github.com/holdenlee/heart2heart">heart2heart</a> (Javascript): Website that pairs people up for conversation. Built on Node.js and MongoDb.</li>
+</ul>
+<h3 id="utilities">Utilities</h3>
+<ul>
+<li><a href="Break%20up%20a%20markdown%20file%20into%20multiple%20markdown%20posts%20by%20headers">postize</a> (Haskell): Break up a markdown file into multiple markdown posts by headers.</li>
+<li><a href="https://github.com/holdenlee/TwToMd">TwToMd</a> (Haskell): Primitive tiddlywiki to markdown converter</li>
+<li><a href="https://github.com/holdenlee/anki-tools">anki-tools</a> (Haskell): Import csv files into Anki.</li>
+<li><a href="https://github.com/holdenlee/gcj-utils">gcj-utils</a> (Haskell): Google code jam utility functions.</li>
+<li><a href="https://github.com/holdenlee/emailer">emailer</a> (Haskell): Automate sending grades by email.</li>
+<li><a href="https://github.com/holdenlee/scripts">scripts</a>: Various shell scripts.</li>
+</ul>
+<!--
+[flash-learn](https://github.com/holdenlee/flash-learn)
+Speed flash card software that targets your weaknesses
+
+[elm-class](https://github.com/holdenlee/elm-class)
+Examples from class on Elm at Princeton Splash 2015-6
+
+https://github.com/holdenlee/theorem-prover
+
+[blographer](https://github.com/holdenlee/blographer)
+Scrape blogs and wikis and show a bird's eye graph view of how posts are connected
+
+[sokoban](https://github.com/holdenlee/Sokoban)
+An implementation of Sokoban using Haskell (Helm)
+
+[puzzle-solvers](https://github.com/holdenlee/puzzle-solvers)
+
+[hanabi](https://github.com/holdenlee/hanabi)
+Engine + AIs for Hanabi card game
+-->
 
   </div>
   
