--- a/Research.html
+++ b/Research.html
@@ -140,8 +140,8 @@
 <ul>
 <li><p><strong>Spectral Filtering for General Linear Dynamical Systems</strong></p>
 <p>with Elad Hazan, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://arxiv.org/abs/1802.03981">arxiv</a>, <a href="https://arxiv.org/pdf/1802.03981">pdf</a>]</p></li>
-<li><pre><code>**Towards Provable Control for Unknown Linear Dynamical Systems**</code></pre>
-<p>with Sanjeev Arora, Elad Hazan, Karan Singh, Cyril Zhang, and Yi Zhang. 2018 ICLR workshop.</p></li>
+<li><p><strong>Towards Provable Control for Unknown Linear Dynamical Systems.</strong></p>
+<p>with Sanjeev Arora, Elad Hazan, Karan Singh, Cyril Zhang, and Yi Zhang. ICLR workshop 2018.</p></li>
 <li><p><strong>Beyond Log-concavity: Provable Guarantees for Sampling Multi-modal Distributions using Simulated Tempering Langevin Monte Carlo.</strong></p>
 <p>with Rong Ge and Andrej Risteski. NIPS AABI Workshop 2017. [<a href="https://arxiv.org/abs/1710.02736">arXiv</a>, <a href="https://arxiv.org/pdf/1710.02736.pdf">pdf</a>, <a href="Simulated%20tempering%20Langevin%20Monte%20Carlo.html">webpage</a>].</p></li>
 <li><p><strong>On the Ability of Neural Nets to Express Distributions.</strong></p>
