--- a/toki pona.html
+++ b/toki pona.html
@@ -124,6 +124,7 @@
 <li><a href="http://tokipona.net/tp/janpije/okamasona.php">jan Pije’s lessons</a></li>
 <li>Presentation in <a href="https://www.dropbox.com/s/nic1hqcmzbi60uy/tokipona.pptx?dl=0">pptx</a>.</li>
 <li><a href="http://tokipona.net/tp/ClassicWordList.aspx">word list</a>, <a href="https://www.dropbox.com/s/lq0rbdjlb1ck0sn/tokipona.xlsx?dl=0">xlsx</a></li>
+<li><a href="https://docs.google.com/spreadsheets/d/12gDr-zsUuwwCWPme9DlAE0JWuFDAFrqh3_IA257ff1U/edit#gid=0">phrase dictionary</a> (shortlink: tiny.cc/tpph)</li>
 </ul>
 
   </div>
