pics for bite-sized writing

--- a/Bite-sized writing for powerful thinking.html
+++ b/Bite-sized writing for powerful thinking.html
@@ -159,7 +159,9 @@
 <li>it doesn’t look so good, so you dress it and make the sentences more eloquent.</li>
 </ol>
 <p>Finally you finish and turn it in and don’t think about it until you get back your paper.</p>
-<p>PICTURE</p>
+<html>
+<img src="pics/write_model1_small.png" alt="model 1" height="246" width="245">
+</html>
 <p>In summary, the model is</p>
 <ol type="1">
 <li>You have an idea or purpose in your head.</li>
@@ -178,7 +180,9 @@
 <li>You go back and forth between more accurate or beautiful thoughts, and clearer and more compelling writing.</li>
 <li>At the end, you have these clusters of ideas, and you want to tell other people about them. You arrange these ideas, adds some section headers and some connecting bits, and you’ve finished an essay, or maybe a book.</li>
 </ul>
-<p>PICTURE</p>
+<html>
+<img src="pics/write_model2_2.png" alt="model 2" width="225" height="275">
+</html>
 <h3 id="comparison">Comparison</h3>
 <p>Let’s compare the two models.</p>
 <ul>
@@ -203,7 +207,7 @@
 <p>In the Harry Potter world, “pensieves” are these basins you can put your memories into, so that you can review them anytime later.</p>
 <p>I think this is awesome - when there’s something that you keep thinking about, or want to reference later, wouldn’t it be great if you could just capture it and put it somewhere?</p>
 <p>We don’t have pensieves, but we do have writing. When you write a thought down, you can rethink it anytime without fear of forgetting it, and build on it.</p>
-<p>PICTURE</p>
+<!--PICTURE-->
 <p>I like to think of index cards as pensieves. They don’t have to be <em>literally</em> index cards.</p>
 <p>An index card is a natural size for writing. Imagine something you would write on an index card - like Trefethen’s index cards. An index card has the feature of not being too large - there’s not much space - and the feature of being a coherent idea (or cluster of ideas).</p>
 <p>Some of the examples are from Lloyd Trefethen, who wrote a lot of his thoughts on 4x6 index cards and then published around 200 into a book.</p>
