--- a/Research.html
+++ b/Research.html
@@ -124,26 +124,28 @@
  </ul> </div>
 
   <div class="blog-main">
-    <p>I am a Ph.D. student at Princeton working with <a href="https://www.cs.princeton.edu/~arora/">Sanjeev Arora</a> (<a href="http://unsupervised.cs.princeton.edu/">research group page</a>, <a href="http://mltheory.cs.princeton.edu/">ML theory at Princeton</a>).</p>
+    <p>I am a Ph.D. student at Princeton advised by <a href="https://www.cs.princeton.edu/~arora/">Sanjeev Arora</a> (<a href="http://unsupervised.cs.princeton.edu/">research group page</a>, <a href="http://mltheory.cs.princeton.edu/">ML theory at Princeton</a>).</p>
 <p>I focus on machine learning theory, and also have broad interests in theoretical computer science and related math.</p>
 <h2 id="research-interests">Research interests</h2>
 <p>Although machine learning (and deep learning in particular) has made great advances in recent years, our mathematical understanding of it is shallow. Learning problems can be highly nonconvex, yet tractable in practice. What hidden structure do these problems have, and how can we design algorithms to take advantage of it?</p>
 <p>Current interests include:</p>
 <ul>
-<li><strong>Probabilistic modeling</strong>: How to design provable algorithms for learning probability distributions and sampling from them? How can we improve classical algorithms like Markov Chain Monte Carlo, or test the quality of the samples?</li>
+<li><strong>Probabilistic modeling (Bayesian inference)</strong>: How to design provable algorithms for learning probability distributions and sampling from them? How can we improve classical algorithms like Markov Chain Monte Carlo, or test the quality of the samples?</li>
 <li><strong>Control theory and reinforcement learning</strong>: It is a well-studied problem how to find the optimal control for known linear dynamical system. However, reinforcement learning deals with learning how to act unknown, combinatorially complex systems; algorithms are heuristic and slow. How to bridge this gap?</li>
 <li><strong>Neural networks</strong>: Neural networks tackle highly nonconvex problems but do very well in practice. Why? What kind of algorithmic improvements can we come up with by understanding their theoretical foundations more deeply?</li>
-<li><strong>Natural language processing</strong>: Language is a fundamental part of human intelligence and a big frontier for machine learning. How do we create machines that can understand “grammar” and “semantics”?</li>
+<li><strong>Natural language understanding</strong>: Language is a fundamental part of human intelligence and a big frontier for machine learning. How do we create machines that can understand “grammar” and “semantics”?</li>
 </ul>
 <h2 id="papers">Papers</h2>
 <h3 id="machine-learning">Machine learning</h3>
 <ul>
+<li><p><strong>Online Sampling from Log-Concave Distributions</strong></p>
+<p>with Oren Mangoubi and Nisheeth Vishnoi. In submission. <a href="https://drive.google.com/file/d/1qKv-vGBDMDzWxTvi4znEm5iuMQ2sjCP_/view">pdf</a></p></li>
 <li><p><strong>Spectral Filtering for General Linear Dynamical Systems</strong></p>
 <p>with Elad Hazan, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://arxiv.org/abs/1802.03981">arxiv</a>, <a href="https://arxiv.org/pdf/1802.03981">pdf</a>]</p></li>
 <li><p><strong>Towards Provable Control for Unknown Linear Dynamical Systems.</strong></p>
-<p>with Sanjeev Arora, Elad Hazan, Karan Singh, Cyril Zhang, and Yi Zhang. ICLR workshop 2018.</p></li>
+<p>with Sanjeev Arora, Elad Hazan, Karan Singh, Cyril Zhang, and Yi Zhang. ICLR workshop 2018. [<a href="https://openreview.net/forum?id=HJGuXK1vM">ICLR page</a>, <a href="https://openreview.net/pdf?id=HJGuXK1vM">pdf</a>]</p></li>
 <li><p><strong>Beyond Log-concavity: Provable Guarantees for Sampling Multi-modal Distributions using Simulated Tempering Langevin Monte Carlo.</strong></p>
-<p>with Rong Ge and Andrej Risteski. NIPS AABI Workshop 2017. [<a href="https://arxiv.org/abs/1710.02736">arXiv</a>, <a href="https://arxiv.org/pdf/1710.02736.pdf">pdf</a>, <a href="Simulated%20tempering%20Langevin%20Monte%20Carlo.html">webpage</a>].</p></li>
+<p>with Rong Ge and Andrej Risteski. NIPS AABI Workshop 2017 and NIPS 2018. [<a href="https://arxiv.org/abs/1710.02736">arXiv</a>, <a href="https://arxiv.org/pdf/1710.02736.pdf">pdf</a>, <a href="Simulated%20tempering%20Langevin%20Monte%20Carlo.html">webpage</a>].</p></li>
 <li><p><strong>On the Ability of Neural Nets to Express Distributions.</strong></p>
 <p>with Rong Ge, Tengyu Ma, Andrej Risteski, and Sanjeev Arora. COLT 2017. [<a href="https://arxiv.org/pdf/1702.07028.pdf">arXiv</a>, <a href="http://proceedings.mlr.press/v65/lee17a/lee17a.pdf">PMLR 65:1271-1296</a>, <a href="http://tiny.cc/hlcolt17">webpage</a>]</p></li>
 </ul>
