--- a/Research.html
+++ b/Research.html
@@ -144,8 +144,12 @@
 <p>with Elad Hazan, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://arxiv.org/abs/1802.03981">arxiv</a>, <a href="https://arxiv.org/pdf/1802.03981">pdf</a>]</p></li>
 <li><p><strong>Towards Provable Control for Unknown Linear Dynamical Systems.</strong></p>
 <p>with Sanjeev Arora, Elad Hazan, Karan Singh, Cyril Zhang, and Yi Zhang. ICLR workshop 2018. [<a href="https://openreview.net/forum?id=HJGuXK1vM">ICLR page</a>, <a href="https://openreview.net/pdf?id=HJGuXK1vM">pdf</a>]</p></li>
-<li><p><strong>Beyond Log-concavity: Provable Guarantees for Sampling Multi-modal Distributions using Simulated Tempering Langevin Monte Carlo.</strong></p>
-<p>with Rong Ge and Andrej Risteski. NIPS AABI Workshop 2017 and NIPS 2018. [<a href="https://arxiv.org/abs/1710.02736">arXiv</a>, <a href="https://arxiv.org/pdf/1710.02736.pdf">pdf</a>, <a href="Simulated%20tempering%20Langevin%20Monte%20Carlo.html">webpage</a>].</p></li>
+<li><p><strong>Beyond Log-concavity: Provable Guarantees for Sampling Multi-modal Distributions using Simulated Tempering Langevin Monte Carlo.</strong> <a href="Simulated%20tempering%20Langevin%20Monte%20Carlo.html">webpage</a></p>
+<p>with Rong Ge and Andrej Risteski.</p>
+<ul>
+<li>NeurIPS 2018. [<a href="https://arxiv.org/abs/1812.00793">arXiv</a>, <a href="https://arxiv.org/abs/1812.00793.pdf">pdf</a>]</li>
+<li>NIPS AABI Workshop 2017. [<a href="https://arxiv.org/abs/1710.02736">arXiv</a>, <a href="https://arxiv.org/pdf/1710.02736.pdf">pdf</a>]</li>
+</ul></li>
 <li><p><strong>On the Ability of Neural Nets to Express Distributions.</strong></p>
 <p>with Rong Ge, Tengyu Ma, Andrej Risteski, and Sanjeev Arora. COLT 2017. [<a href="https://arxiv.org/pdf/1702.07028.pdf">arXiv</a>, <a href="http://proceedings.mlr.press/v65/lee17a/lee17a.pdf">PMLR 65:1271-1296</a>, <a href="http://tiny.cc/hlcolt17">webpage</a>]</p></li>
 </ul>
