--- a/Links.html
+++ b/Links.html
@@ -123,6 +123,7 @@
 <p>My feedly OPML (which you can import to a feed reader) is <a href="https://dl.dropboxusercontent.com/u/27883775/feedly.opml">here</a>.</p>
 <h2 id="subcategories">Subcategories</h2>
 <ul>
+<li><a href="Podcasts.html">Podcasts</a></li>
 <li><a href="Links%20for%20math.html">Links for math</a></li>
 <li><a href="Links%20for%20education.html">Links for education</a></li>
 <li><a href="Links%20for%20writers%20and%20readers.html">Links for writers and readers</a></li>
